<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sudo Chef</string>
    <string name="action_settings">Settings</string>


    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_search">RecipeSearch</string>
    <string name="title_activity_choose_recipe">ChooseRecipeActivity</string>
    <string name="title_activity_guide">GuideActivity</string>

    <string name="start_camera_button">Add Products</string>
    <string name="start_recipe_button">Start Recipe</string>
    <string name="saved_recipes_button">Saved Recipes</string>
    <string name="shopping_list_button">View Shopping List</string>
    <string name="start_bluetooth_button">Start Bluetooth</string>

    <string name="scroll_loading_text">Start Recipe</string>
    <string name="blank_icon">Recipe Thumbnail</string>
    <string name="edit_message">Recipe key words</string>
    <string name="button_send">Search</string>
    <string name="start_search">Find Recipes</string>

    <string name="fieldTitle">Enter In The Following Information</string>
    <string name="hint_genName">Enter Item name</string>
    <string name="hint_amt">Enter amount</string>
    <string name="hint_unit">Enter unit</string>
    <string name="hint_Expire">MM DD YYYY</string>

    <string name="select_message">Select btSerial device from paired devices:</string>
    <string name="no_device_message">If no devices are listed please pair your device in Android settings</string>
    <string name="enter_some_text">Enter some text</string>
    <string name="function_1">low</string>
    <string name="function_2">high</string>
    <string name="function_3">off</string>

    <string name="ok">Okay</string>
    <string name="cancel">Cancel</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_cam">CamActivity</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="title_activity_send_data">SendDataActivity</string>
    <string name="button_send_database">Suggest Recipes</string>
    <string name="back_button">back</string>
    <string name="next_button">next</string>

    <string-array name="units_array">
        <item>TEASPOON</item>
        <item>TABLESPOON</item>
        <item>FLUIDOUNCE</item>
        <item>CUP</item>
        <item>PINT</item>
        <item>QUART</item>
        <item>GALLON</item>
        <item>LITER</item>
        <item>POUND</item>
        <item>OUNCE</item>
        <item>GRAM</item>
        <item>METER</item>
        <item>STICK</item>
        <item>HEAD</item>
        <item>CLOVE</item>
        <item>CAN</item>
        <item>UNIT</item>
    </string-array>
    <string name="title_activity_shopping_list">ShoppingListActivity</string>

    <string name="title_activity_create_shopping_list">CreateShoppingListActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_saved_recipes">SavedRecipesActivity</string>
    <string name="save_recipe_button">Save</string>
    <string name="add_to_shopping_list_button">Add to Shopping List</string>
    <string name="clear_checked_button">Clear Checked Items</string>
    <string name="delete_recipe_text">Delete recipe?</string>

</resources>
