<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/fieldTitle"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/textView"
        android:layout_marginBottom="10dp"
        android:textColor="#0000FF"/>

    <EditText
        android:id="@+id/ItemNameVal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_genName"
        android:ems="10" />

    <EditText
        android:id="@+id/AmountVal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_amt"
        android:inputType="number" />

    <EditText
        android:id="@+id/EditUnitVal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_unit"
        android:inputType="text" />

    <EditText
        android:id="@+id/ExpireVal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hint_Expire"
        android:inputType="text" />


</LinearLayout>