<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DeviceListActivity" >

    <Button
        android:id="@+id/functionOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="104dp"
        android:text="@string/function_1" />

    <Button
        android:id="@+id/functionTwo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/functionOne"
        android:layout_below="@+id/functionOne"
        android:layout_marginTop="67dp"
        android:text="@string/function_2" />

    <Button
        android:id="@+id/functionThree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/functionTwo"
        android:layout_below="@+id/functionTwo"
        android:layout_marginTop="67dp"
        android:text="@string/function_3" />

</RelativeLayout>