<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blurred"
    android:orientation="vertical"
    android:padding="10dp">


    <ViewSwitcher
        android:id="@+id/viewSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inAnimation="@android:anim/slide_in_left"
        android:outAnimation="@anim/slide_out_left"
        android:layout_marginBottom="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <Button
                android:id="@+id/searchByExpire"
                android:layout_width="fill_parent"
                android:layout_height="72dp"
                android:textSize="20sp"
                android:layout_alignParentTop="true"
                android:layout_toLeftOf="@+id/button5"
                android:background="@drawable/mybutton"
                android:onClick="searchByExpireDate"
                android:text="@string/button_send_database" />

            <Button
                android:id="@+id/button5"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_margin="8dp"
                android:background="@drawable/search"
                android:onClick="switchToSearch"
                android:padding="8dp" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/backArrowButton"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="@drawable/arrowbutton"
                android:onClick="switchToSuggest" />

            <EditText
                android:id="@+id/searchText"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_marginLeft="8dp"
                android:inputType="text"
                android:layout_weight="1"
                android:background="@drawable/myedittext"
                android:ems="12"
                android:hint="@string/edit_message"
                android:imeOptions="actionSearch"
                android:padding="10dp">

                <requestFocus />
            </EditText>

            <Button
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginLeft="8dp"
                android:background="@drawable/mybutton"
                android:onClick="search"
                android:padding="8dp"
                android:textSize="20sp"
                android:text="@string/button_send" />

        </LinearLayout>
    </ViewSwitcher>

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:drawSelectorOnTop="false" />

</LinearLayout>